# Rworld

./: .gitignore  pyproject.toml  render.yaml  start_headroom.bat  start_services.bat
roofiq/ai_service/: geo_processor.py  image_processor.py  main.py  pyproject.toml  roof_detector.py
rworld-ai/backend/aiq/aiq-main/: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENSE-THIRD-PARTY  README.md  pyproject.toml
rworld-ai/backend/aiq/aiq-main/.github/workflows/: ci.yml  ui.yml
rworld-ai/backend/aiq/aiq-main/ci/: markdown-link-check-config.json
rworld-ai/backend/aiq/aiq-main/ci/scripts/: clear_notebook_output_cells.sh  test_scripts.sh
rworld-ai/backend/aiq/aiq-main/configs/: config_cli_default.yml  config_frontier_models.yml  config_web_default_llamaindex.yml  config_web_frag.yml
rworld-ai/backend/aiq/aiq-main/deploy/: .env.example  Dockerfile  README.md  entrypoint.py  start_web.py
rworld-ai/backend/aiq/aiq-main/deploy/compose/: README.md  docker-compose.yaml  init-db.sql
rworld-ai/backend/aiq/aiq-main/deploy/helm/: README.md  openshift.md  openshift_overlay_strategy.md
rworld-ai/backend/aiq/aiq-main/deploy/helm/deployment-k8s/: Chart.yaml  README.md  values-openshift.yaml  values.yaml
rworld-ai/backend/aiq/aiq-main/docs/: Makefile  README.md
rworld-ai/backend/aiq/aiq-main/docs/notebooks/: 0_Getting_Started_with_AIQ.ipynb  1_Deep_Researcher_Web_Search.ipynb  2_Deep_Researcher_Customization.ipynb
rworld-ai/backend/aiq/aiq-main/docs/source/: conf.py  index.md  project.json  versions1.json
rworld-ai/backend/aiq/aiq-main/docs/source/_templates/: sidebar-nav-bs.html
rworld-ai/backend/aiq/aiq-main/docs/source/architecture/: data-flow.md  index.md  overview.md
rworld-ai/backend/aiq/aiq-main/docs/source/contributing/: code-organization.md  code-style.md  development-setup.md  index.md  pr-workflow.md  testing.md
rworld-ai/backend/aiq/aiq-main/docs/source/customization/: configuration-reference.md  hitl.md  index.md  knowledge-layer.md  mcp-tools.md  prompts.md  swapping-models.md  tools-and-sources.md
rworld-ai/backend/aiq/aiq-main/docs/source/deployment/: docker-build.md  docker-compose.md  index.md  kubernetes.md  observability.md  production.md
rworld-ai/backend/aiq/aiq-main/docs/source/evaluation/: index.md
rworld-ai/backend/aiq/aiq-main/docs/source/examples/: cli-with-local-nims.md  full-pipeline-llamaindex.md  full-pipeline-web.md  hybrid-frontier-model.md  index.md  minimal-shallow-only.md
rworld-ai/backend/aiq/aiq-main/docs/source/extending/: adding-a-data-source.md  adding-a-tool.md  index.md
rworld-ai/backend/aiq/aiq-main/docs/source/get-started/: developer-guide.md  index.md  installation.md  quick-start.md
rworld-ai/backend/aiq/aiq-main/docs/source/integration/: index.md  rest-api.md
rworld-ai/backend/aiq/aiq-main/docs/source/reference/: knowledge-layer-sdk.md
rworld-ai/backend/aiq/aiq-main/docs/source/resources/: changelog.md  faq.md  troubleshooting.md
rworld-ai/backend/aiq/aiq-main/frontends/aiq_api/: README.md  pyproject.toml
rworld-ai/backend/aiq/aiq-main/frontends/aiq_api/tests/: __init__.py  test_periodic_cleanup.py
rworld-ai/backend/aiq/aiq-main/frontends/benchmarks/deepresearch_bench/: README.md
rworld-ai/backend/aiq/aiq-main/frontends/benchmarks/deepsearch_qa/: README.md  pyproject.toml
rworld-ai/backend/aiq/aiq-main/frontends/benchmarks/freshqa/: README.md  pyproject.toml
rworld-ai/backend/aiq/aiq-main/frontends/cli/: __init__.py  cli.py  pyproject.toml
rworld-ai/backend/aiq/aiq-main/frontends/cli/auth/: __init__.py  local_token_store.py
rworld-ai/backend/aiq/aiq-main/frontends/debug/: pyproject.toml
rworld-ai/backend/aiq/aiq-main/frontends/ui/: .dockerignore  .env.example  .eslintrc.json  .gitignore  README.md  next.config.ts  package-lock.json  package.json  postcss.config.js  server.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
rworld-ai/backend/aiq/aiq-main/frontends/ui/.husky/: pre-commit
rworld-ai/backend/aiq/aiq-main/frontends/ui/deploy/: Dockerfile  README.md
rworld-ai/backend/aiq/aiq-main/frontends/ui/src/: proxy.ts
rworld-ai/backend/aiq/aiq-main/scripts/: README.md  dev.sh  setup.sh  start_cli.sh  start_e2e.sh  start_server_in_debug_mode.sh
rworld-ai/backend/aiq/aiq-main/sources/google_scholar_paper_search/: README.md  pyproject.toml
rworld-ai/backend/aiq/aiq-main/sources/google_scholar_paper_search/src/: __init__.py  paper_search.py  register.py
rworld-ai/backend/aiq/aiq-main/sources/google_scholar_paper_search/tests/: __init__.py  conftest.py  test_paper_search.py
rworld-ai/backend/aiq/aiq-main/sources/knowledge_layer/: KNOWLEDGE-LAYER-SETUP.md  README.md  pyproject.toml
rworld-ai/backend/aiq/aiq-main/sources/knowledge_layer/src/: __init__.py  register.py
rworld-ai/backend/aiq/aiq-main/sources/tavily_web_search/: pyproject.toml
rworld-ai/backend/aiq/aiq-main/sources/tavily_web_search/src/: __init__.py  register.py
rworld-ai/backend/aiq/aiq-main/src/aiq_agent/: __init__.py
rworld-ai/backend/aiq/aiq-main/src/aiq_agent/agents/: __init__.py
rworld-ai/backend/aiq/aiq-main/src/aiq_agent/auth/: __init__.py  utils.py
rworld-ai/backend/aiq/aiq-main/src/aiq_agent/common/: __init__.py  callbacks.py  citation_verification.py  config_validation.py  data_sources.py  json_utils.py  llm_provider.py  message_utils.py  prompt_utils.py  tool_validation.py
rworld-ai/backend/aiq/aiq-main/src/aiq_agent/fastapi_extensions/: __init__.py  register.py
rworld-ai/backend/aiq/aiq-main/src/aiq_agent/knowledge/: __init__.py  base.py  factory.py  schema.py  summary_store.py
rworld-ai/backend/aiq/aiq-main/src/aiq_agent/observability/: otel_header_redaction_exporter.py
rworld-ai/backend/aiq/aiq-main/tests/aiq_agent/: conftest.py
rworld-ai/backend/aiq/aiq-main/tests/aiq_agent/async_api/: test_websocket_reconnect.py
rworld-ai/backend/aiq/aiq-main/tests/knowledge_layer_tests/: run_adapter_compliance.py  run_foundational_rag.py  run_llamaindex.py  run_llamaindex_api.py  test_summary_store.py
(+2370 files in other folders)
