[project]
name = "roofiq-ai-service"
version = "1.0.0"
description = "SHEKHAR ROOFIQ AI — Roof Analysis Microservice (YOLO + SAM2 + OpenCV + GeoPandas)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "ultralytics>=8.2.0",
    "opencv-python-headless>=4.9.0",
    "geopandas>=0.14.4",
    "shapely>=2.0.4",
    "Pillow>=10.3.0",
    "numpy>=1.26.4",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "pyproj>=3.6.1",
    "osmnx>=2.1.0",
    "segment-anything>=1.0",
]
