# SPDX-FileCopyrightText: Copyright (c) 2025-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools]
packages = ["knowledge_layer", "knowledge_layer.llamaindex", "knowledge_layer.foundational_rag"]
package-dir = {"knowledge_layer" = "src"}

[project]
name = "knowledge-layer"
version = "1.0.0"
description = "NAT-based Knowledge Layer - pluggable document ingestion and retrieval"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "Apache-2.0"}
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
llamaindex = [
    "llama-index>=0.10.0",
    "llama-index-embeddings-nvidia>=0.1.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "chromadb>=0.4.0",
    "pdfplumber>=0.10.0",
    "pypdfium2>=5.0.0",
    "Pillow>=9.0.0",
    "openai>=1.0.0",
    "docx2txt>=0.8",
]
foundational_rag = [
    "requests>=2.28.0",
    "urllib3>=2.0.0",
    "docx2txt>=0.8",
    "python-pptx>=0.6.21",
]
all = [
    "knowledge-layer[llamaindex,foundational_rag]",
]

[project.entry-points."nat.plugins"]
knowledge_layer = "knowledge_layer.register"
